--- a/lab_1/lab1/lab1/Base.lproj/Main.storyboard
+++ b/lab_1/lab1/lab1/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="isB-cH-F9V">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina4_0" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -19,17 +19,17 @@
                         <viewControllerLayoutGuide type="bottom" id="UUF-de-OG7"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="a28-Wn-lF6">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Click the button below" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lGm-iO-pxc">
-                                <rect key="frame" x="74" y="60" width="172" height="21"/>
+                                <rect key="frame" x="198" y="60" width="172" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Og1-kt-9ZO">
-                                <rect key="frame" x="74" y="112" width="172" height="30"/>
+                                <rect key="frame" x="198" y="112" width="172" height="30"/>
                                 <color key="backgroundColor" red="0.26941841439999997" green="0.64176127569999997" blue="0.90364583330000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <state key="normal" title="Open the App Store">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -63,19 +63,19 @@
                         <viewControllerLayoutGuide type="bottom" id="UA3-UU-3uP"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="CgM-tu-qAa">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select your Country and City" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iul-jn-9gz">
-                                <rect key="frame" x="50" y="41" width="220" height="21"/>
+                                <rect key="frame" x="174" y="20" width="220" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Mkf-oO-76A">
-                                <rect key="frame" x="0.0" y="86" width="320" height="216"/>
+                                <rect key="frame" x="20" y="47" width="308" height="216"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="216" id="X5F-qd-88J"/>
+                                    <constraint firstAttribute="width" constant="308" id="X5F-qd-88J"/>
                                 </constraints>
                                 <variation key="default">
                                     <mask key="constraints">
@@ -93,7 +93,7 @@
                                 </connections>
                             </pickerView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eQW-of-MNA">
-                                <rect key="frame" x="16" y="310" width="288" height="25"/>
+                                <rect key="frame" x="336" y="95" width="212" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="ZIN-RT-QKU"/>
                                     <constraint firstAttribute="height" constant="25" id="hCV-KG-JPU"/>
@@ -119,7 +119,7 @@
                                 </variation>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Req-zw-Bm6">
-                                <rect key="frame" x="16" y="343" width="288" height="25"/>
+                                <rect key="frame" x="336" y="158" width="212" height="25"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="25" id="V7j-xw-bkT"/>
                                     <constraint firstAttribute="height" constant="25" id="XcX-bD-tGU"/>
@@ -170,9 +170,9 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
+                                <exclude reference="Tvu-gj-B25"/>
                                 <exclude reference="Lso-6A-Jky"/>
                                 <exclude reference="fEB-fE-W6R"/>
-                                <exclude reference="Tvu-gj-B25"/>
                                 <exclude reference="12G-3B-Ax2"/>
                                 <exclude reference="AhN-OM-r1I"/>
                                 <exclude reference="QKp-6e-WiE"/>
@@ -183,12 +183,12 @@
                         </variation>
                         <variation key="heightClass=compact">
                             <mask key="constraints">
+                                <include reference="Tvu-gj-B25"/>
+                                <exclude reference="nfD-AC-jNT"/>
                                 <exclude reference="DDb-9p-qh4"/>
                                 <exclude reference="KuS-aQ-sv5"/>
                                 <include reference="Lso-6A-Jky"/>
                                 <include reference="fEB-fE-W6R"/>
-                                <include reference="Tvu-gj-B25"/>
-                                <exclude reference="nfD-AC-jNT"/>
                                 <include reference="12G-3B-Ax2"/>
                                 <exclude reference="4Pr-t2-PLa"/>
                                 <include reference="AhN-OM-r1I"/>
@@ -211,7 +211,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nZG-nf-Tqr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="687.5" y="-264.375"/>
+            <point key="canvasLocation" x="686.61971830985919" y="-264.375"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="707-Q2-3DB">
