--- a/Project/Globetrot/Globetrot/Base.lproj/LaunchScreen.storyboard
+++ b/Project/Globetrot/Globetrot/Base.lproj/LaunchScreen.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1217" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -18,25 +18,36 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Uhr-OO-l3q">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="Uhr-OO-l3q">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="So, Where have you been lately?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vsm-kn-rxu">
+                                <rect key="frame" x="63.5" y="141" width="248" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Uhr-OO-l3q" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="ULd-Pu-h5w"/>
-                            <constraint firstItem="Uhr-OO-l3q" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="aEr-7r-81U"/>
-                            <constraint firstAttribute="trailing" secondItem="Uhr-OO-l3q" secondAttribute="trailing" id="dsO-gU-1nT"/>
-                            <constraint firstItem="Uhr-OO-l3q" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="tsW-OS-RtS"/>
+                            <constraint firstAttribute="trailing" secondItem="Uhr-OO-l3q" secondAttribute="trailing" id="7i3-Vv-IXH"/>
+                            <constraint firstItem="Uhr-OO-l3q" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="8U1-SW-c9J"/>
+                            <constraint firstItem="Uhr-OO-l3q" firstAttribute="top" secondItem="vsm-kn-rxu" secondAttribute="bottom" constant="-162" id="NWe-yd-4gL"/>
+                            <constraint firstItem="Uhr-OO-l3q" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="Nqh-Dq-st6"/>
+                            <constraint firstItem="Uhr-OO-l3q" firstAttribute="bottom" secondItem="xb3-aO-Qok" secondAttribute="top" id="mas-ua-iPq"/>
+                            <constraint firstItem="vsm-kn-rxu" firstAttribute="centerX" secondItem="Uhr-OO-l3q" secondAttribute="centerX" id="mdx-SJ-VPV"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="52" y="374.66266866566718"/>
+            <point key="canvasLocation" x="50.625" y="373.94366197183098"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="LaunchScreen" width="1598" height="2813"/>
+    </resources>
 </document>
